# mimc-abc

./: .gitignore  Cargo.toml  README.md
benches/: credential_scenarios.rs
benches_analysis/: analysis.py  credential_performance_restructured.tex  extractor.py  multi_issuer_performance.tex  plot_comparison.py  plot_comparison_for_thesis.py  single_issuer_performance.tex  table_maker.py
benches_analysis/extracts/: extract.csv  summary_table.csv
src/: commitment.rs  credential.rs  error.rs  identity_binding.rs  lib.rs  linked_credentials.rs  multi_credential.rs  multi_identity_credentials.rs  multi_issuer.rs  pairing.rs  proof.rs  protocol.rs  public_params.rs  signature.rs  verkey.rs
